--- a/public/posting/style.css
+++ b/public/posting/style.css
@@ -39,7 +39,7 @@ body {
   justify-content: center;
 }
 .legend-gradient {
-  background: linear-gradient(to top, #feedde, #fdbe85, #fd8d3c, #e6550d, #a63603 95%, #960049 95% 100%);
+  background: linear-gradient(to top, #E3FAFE, #D2EDFD, #73C5FB, #FFB0FA, #0C99F7 95%, #04619F 95% 100%);
   height: 100px;
   width: 20px;
 }
