--- a/public/posting/style.css
+++ b/public/posting/style.css
@@ -39,7 +39,7 @@ body {
   justify-content: center;
 }
 .legend-gradient {
-  background: linear-gradient(to top, #E3FAFE, #D2EDFD, #73C5FB, #FFB0FA, #0C99F7 95%, #04619F 95% 100%);
+  background: linear-gradient(to top, #FFD666, #E3FAFE, #D2EDFD, #73C5FB, #42B0FA, #0C99F7 95%, #04619F 95% 100%);
   height: 100px;
   width: 20px;
 }
@@ -52,6 +52,7 @@ body {
 }
 .legend-labels span {
   text-align: left;
+  font-size: 10.5px;
 }
 
 @media (max-width: 767px) {
